--- a/index.html
+++ b/index.html
@@ -183,10 +183,10 @@
                 <p><i class="fa-solid fa-square-phone"></i>+94 71 088 8793</p>
 
                 <div class="social-icons">
-                    <a href="https://facebook.com"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="#"><i class="fa-brands fa-twitter-square"></i></a>
-                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="linkedin.com/in/mnui-gunasinghe-2b2b24151"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://www.facebook.com/nipuna.udara.10?mibextid=ZbWKwL" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="https://twitter.com/Nipunaudara2?t=4JR16s6TWsoS_S3xB-K7pA&s=08" target="_blank"><i class="fa-brands fa-twitter-square"></i></a>
+                    <a href="https://instagram.com/nipuna_udara_?igshid=OGQ5ZDc2ODk2ZA==" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.linkedin.com/in/mnui-gunasinghe-2b2b24151?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                 </div>
                 <a href="Images/my-cv.pdf" download class="btn btn2">Download CV</a>
             </div>
@@ -209,7 +209,7 @@
     -->
 
     <div class="copyright">
-        <p>Copyright ©️ Nipuna udara. <i class="fa-solid fa-heart"></i></p>
+        <p>Copyright ©️ Nipuna udara.</p>
     </div>
 </div>
 
