--- a/index.html
+++ b/index.html
@@ -144,8 +144,9 @@
                 <img src="Images/Giftery FB post mockup.png">
                 <div class="layer">
                     <h3>Social Media Post</h3>
-                    <p>this is the customer requirement. write a creative and attractive 
-                        cover letter to get this upwork project.</p>
+                    <p>"Experience design excellence. From branding to web design and more, 
+                        our creative team brings your vision to life with precision and flair."
+                    </p>
                         <a href="portfoliomenu.html"><i class="fa-solid fa-link"></i></a>
                 </div>        
             </div>
@@ -153,8 +154,9 @@
                 <img src="Images/work.png">
                 <div class="layer">
                     <h3>KDUSC Web App UI</h3>
-                    <p>this is the customer requirement. write a creative and attractive 
-                        cover letter to get this upwork project.</p>
+                    <p>"Experience design excellence. From branding to web design and more, 
+                        our creative team brings your vision to life with precision and flair."
+                    </p>
                         <a href="portfoliomenu.html"><i class="fa-solid fa-link"></i></a>
                 </div>
             </div>
@@ -162,8 +164,9 @@
                 <img src="Images/work3.png">
                 <div class="layer">
                     <h3>Personal Portfolio Website</h3>
-                    <p>this is the customer requirement. write a creative and attractive 
-                        cover letter to get this upwork project.</p>
+                    <p>"Experience design excellence. From branding to web design and more, 
+                        our creative team brings your vision to life with precision and flair."
+                    </p>
                         <a href="portfoliomenu.html"><i class="fa-solid fa-link"></i></a>
                 </div>
             </div>
